# retro-game-launcher

./: .gitignore  com.charlieqle.RetroGameLauncher.json  gnome-python-template.in  install.sh  meson.build  org.gnome.Example.json  retro-game-launcher.in
.github/workflows/: build-main.yml  main.yml
data/: com.charlieqle.RetroGameLauncher.appdata.xml.in  com.charlieqle.RetroGameLauncher.desktop.in  com.charlieqle.RetroGameLauncher.gresource.xml  com.charlieqle.RetroGameLauncher.gschema.xml  meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gresource.xml  org.gnome.Example.gschema.xml
data/presets/: Nintendo 64.json  Nintendo DS.json  Nintendo GameCube.json  Nintendo Gameboy.json  Nintendo Wii.json  Super Nintendo Entertainment System.json
data/ui/: add_system_window.blp  dynamic_preferences_group.blp  game_item.blp  game_view.blp  main_window.blp  minimal_window.blp  preferences.blp  system_box.blp  system_preferences.blp  system_row.blp  window.blp
data/ui/widgets/: directory_entry_row.blp  extension_row.blp  game_item.blp  key_value_row.blp
gnome_python_template/: main.py  window.py
po/: POTFILES  meson.build
retro_game_launcher/: main.py
retro_game_launcher/backend/: config.py  constants.py  game.py  setting_keys.py  settings.py  system.py  utility.py
retro_game_launcher/frontend/: add_system_window.py  application.py  dynamic_preferences_group.py  game.py  game_view.py  main_window.py  minimal_window.py  preferences.py  system_box.py  system_preferences.py  system_row.py
retro_game_launcher/frontend/widgets/: directory_entry_row.py  extension_row.py  game_item.py  key_value_row.py
